--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -13,7 +13,7 @@
 
 {% block header %}
 
-<div class="flex-ns flex-wrap-ns justify-between-m banner-bg bg-banner-sz coverm cover-s banner-height">
+<div class="flex-ns flex-wrap-ns justify-between-m banner-bg bg-banner-sz coverm cover-s banner-height minh-100vh">
   <div class="ba1 mb3 relative dt-ns mt0-ns pr3-ns pl3-ns pt3 ma-auto pt6-l pt4 mw9 ml-auto mr-auto w-100">
     <!-- Banner Image-->
     <div class="fr-l w-45-l w100-m w90-s tc ml-auto mr-auto"
@@ -53,7 +53,7 @@
 
 {% block content %}
 
-<div class="slideshow-container bg-quotes bg-banner-sz coverm cover-s banner-height justify-center items-center flex flex-wrap">
+<div class="slideshow-container bg-quotes bg-banner-sz coverm cover-s banner-height justify-center items-center flex flex-wrap minh-100vh">
   <div class="slideshow-inner w-100 ph4">
     <div class="mySlides fadein">
       <div>
@@ -70,7 +70,7 @@
       </div>
     </div>
   </div>
-  <div class="tc w-100">
+  <div class="tc w-100 h1 absolute pt7 mt6">
     <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
     <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
   </div>
@@ -236,7 +236,7 @@
     </div>
   </div>
 </div>
-<div class="bg-solutions bg-banner-sz coverm cover-s banner-height justify-center items-center flex flex-wrap">
+<div class="bg-solutions bg-banner-sz coverm cover-s banner-height justify-center items-center flex flex-wrap minh-100vh">
   <div class="mw9 pl3 center pv0-l pv4">
     <div class="dib-l width-sols v-top">
       <h2 class="white roboto f2 fw7 title-sols display-sols mv3">
@@ -335,7 +335,7 @@
   </div>
 </div>
 <!-- Ebook section -->
-<div class="bg-ebook bg-banner-sz cover bg-center banner-height justify-center items-center flex flex-wrap">
+<div class="bg-ebook bg-banner-sz cover bg-center banner-height justify-center items-center flex flex-wrap minh-100vh">
   <div>
     <h2 class="white center roboto w-100 tc f1-ns f2 lh3 pl3-l ph3 mw7">
       Are you going fast in the wrong direction?<br>
@@ -351,7 +351,7 @@
   </div>
 </div>
 <!-- About us section -->
-<div class="banner-height justify-center items-center flex flex-wrap">
+<div class="banner-height justify-center items-center flex flex-wrap minh-100vh">
   <div class="overflow-hidden">
     <div class="tc mw7 center">
       <h2 class="c-fluid-bk roboto tc f1-ns lh3 mv4">
@@ -372,7 +372,7 @@
     {% include "clients-carousel.html" %}
   </div>
 </div>
-<div class="asap-bg bg-banner-sz cover bg-center banner-height justify-center items-center flex flex-wrap">
+<div class="asap-bg bg-banner-sz cover bg-center banner-height justify-center items-center flex flex-wrap minh-100vh">
   <p class="white f2-ns f3 tc roboto b mv0">
     We find all vulnerabilities and report them ASAP
   </p>
